configure diktat + fixes